cosmetic: eliminate code warnings